--- a/AnperoFrontend/Views/Product/Index.cshtml
+++ b/AnperoFrontend/Views/Product/Index.cshtml
@@ -121,11 +121,11 @@
                                     <div class="button-group">
                                         @if (item.IsInstock)
                                         {
-                                        <a class="btn-add-cart" href="#">Thêm vào giỏ hàng</a>
+                                            <a class="btn-add-cart" href="#">Thêm vào giỏ hàng</a>
                                         }
                                         else
                                         {
-                                        <a class="btn-add-cart" href="#">Tạm hết hàng</a>
+                                            <a class="btn-add-cart" href="#">Tạm hết hàng</a>
                                         }
                                     </div>
                                     <div class="button-group">
@@ -171,8 +171,13 @@
                                             <li class="col-sx-12 col-sm-3">
                                                 <div class="product-container">
                                                     <div class="left-block">
-                                                        <a href="#">
+                                                        <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,@item.Id)">
                                                             <img class="img-responsive" alt="@item.PrName" src="@items.Images" />
+                                                            @if (item.IsSale)
+                                                            {
+                                                                <div class="price-percent-reduction2">giảm @Anpero.StringHelpper.ConVertToMoneyFormatInt((item.Price - item.SalePrice).ToString())</div>
+                                                            }
+
                                                         </a>
                                                         <div class="quick-view">
                                                             <a title="Add to my wishlist" class="heart" href="#"></a>
@@ -184,7 +189,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="right-block">
-                                                        <h5 class="product-name"><a href="#">Maecenas consequat mauris</a></h5>
+                                                        <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName,@item.Id)">@item.PrName</a></h5>
                                                         <div class="product-star">
                                                             <i class="fa fa-star"></i>
                                                             <i class="fa fa-star"></i>
@@ -193,8 +198,16 @@
                                                             <i class="fa fa-star-half-o"></i>
                                                         </div>
                                                         <div class="content_price">
-                                                            <span class="price product-price">$38,95</span>
-                                                            <span class="price old-price">$52,00</span>
+                                                            @if (item.IsSale)
+                                                            {
+                                                                <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString())</span>
+                                                                <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString())</span>
+                                                            }
+                                                            else
+                                                            {
+                                                                <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString())</span>
+                                                            }
+
                                                         </div>
                                                     </div>
                                                 </div>
@@ -225,6 +238,32 @@
         <link rel="stylesheet" type="text/css" href="/assets/lib/fancyBox/jquery.fancybox.css">
         <script type="text/javascript" src="/assets/lib/jquery.elevatezoom.js"></script>
         <script type="text/javascript" src="/assets/lib/fancyBox/jquery.fancybox.js"></script>
+        <script type="text/javascript" src="/assets/lib/countdown/jquery.plugin.js"></script>
+        <script type="text/javascript" src="/assets/lib/countdown/jquery.countdown.js"></script>
+
         @item.Script
+        <script>
+            /** COUNT DOWN **/
+            $('[data-countdown]').each(function () {
+                var $this = $(this), finalDate = $(this).data('countdown');
+                $this.countdown(finalDate, function (event) {
+                    var fomat = '<span>%H</span><b></b><span>%M</span><b></b><span>%S</span>';
+                    $this.html(event.strftime(fomat));
+                });
+            });
+            if ($('.countdown-lastest').length > 0) {
+                var labels = ['Years', 'Months', 'Weeks', 'Days', 'Hrs', 'Mins', 'Secs'];
+                var layout = '<span class="box-count"><span class="number">{dnn}</span> <span class="text">Ngày</span></span><span class="dot">:</span><span class="box-count"><span class="number">{hnn}</span> <span class="text">Giờ</span></span><span class="dot">:</span><span class="box-count"><span class="number">{mnn}</span> <span class="text">Phút</span></span><span class="dot">:</span><span class="box-count"><span class="number">{snn}</span> <span class="text">Giây</span></span>';
+                $('.countdown-lastest').each(function () {
+                    var austDay = new Date($(this).data('y'), $(this).data('m') - 1, $(this).data('d'), $(this).data('h'), $(this).data('i'), $(this).data('s'));
+                    $(this).countdown({
+                        until: austDay,
+                        labels: labels,
+                        layout: layout
+                    });
+                });
+            }
+        </script>
+
     }
 }
