--- a/AnperoFrontend/Views/Product/Index.cshtml
+++ b/AnperoFrontend/Views/Product/Index.cshtml
@@ -85,7 +85,7 @@
                                     {
                                         <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
                                         <span class="old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
-                                        <span class="discount">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.Price / item.SalePrice).ToString()) đ</span>
+                                        <span class="discount">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice- item.Price).ToString()) đ</span>
                                     }
                                     else
                                     {
@@ -128,11 +128,13 @@
                                             <a class="btn-add-cart" href="#">Tạm hết hàng</a>
                                         }
                                     </div>
+
                                     <div class="button-group">
                                         <a target="_blank" class="wishlist" href="//www.facebook.com/sharer.php?u=@HttpContext.Current.Request.Url.AbsoluteUri">
                                             <i class="fa fa-facebook-official"></i>
                                             <br>Share
                                         </a>
+
                                         <a class="compare" href="//plus.google.com/share?url=@HttpContext.Current.Request.Url.AbsoluteUri">
                                             <i class="fa fa-google-plus"></i>
                                             <br>
