--- a/AnperoFrontend/assets/css/style.css
+++ b/AnperoFrontend/assets/css/style.css
@@ -5210,3 +5210,8 @@ span.notify-right{
   color: #fff;
   opacity: 0.8;
 }
+.sm-banner{
+    height: 158px;
+    margin-bottom: 2px;
+    overflow: hidden;
+}
