--- a/AnperoFrontend/Views/Product/Category.cshtml
+++ b/AnperoFrontend/Views/Product/Category.cshtml
@@ -790,3 +790,33 @@
             <!-- ./ Center colunm -->
         </div>
 </div></div>
+@section  scripts{
+    <link rel="stylesheet" type="text/css" href="/assets/lib/fancyBox/jquery.fancybox.css">
+    <script type="text/javascript" src="/assets/lib/jquery.elevatezoom.js"></script>
+    <script type="text/javascript" src="/assets/lib/fancyBox/jquery.fancybox.js"></script>
+    <script type="text/javascript" src="/assets/lib/countdown/jquery.plugin.js"></script>
+    <script type="text/javascript" src="/assets/lib/countdown/jquery.countdown.js"></script>   
+    <script>
+            /** COUNT DOWN **/
+            $('[data-countdown]').each(function () {
+                var $this = $(this), finalDate = $(this).data('countdown');
+                $this.countdown(finalDate, function (event) {
+                    var fomat = '<span>%H</span><b></b><span>%M</span><b></b><span>%S</span>';
+                    $this.html(event.strftime(fomat));
+                });
+            });
+            if ($('.countdown-lastest').length > 0) {
+                var labels = ['Years', 'Months', 'Weeks', 'Days', 'Hrs', 'Mins', 'Secs'];
+                var layout = '<span class="box-count"><span class="number">{dnn}</span> <span class="text">Ngày</span></span><span class="dot">:</span><span class="box-count"><span class="number">{hnn}</span> <span class="text">Giờ</span></span><span class="dot">:</span><span class="box-count"><span class="number">{mnn}</span> <span class="text">Phút</span></span><span class="dot">:</span><span class="box-count"><span class="number">{snn}</span> <span class="text">Giây</span></span>';
+                $('.countdown-lastest').each(function () {
+                    var austDay = new Date($(this).data('y'), $(this).data('m') - 1, $(this).data('d'), $(this).data('h'), $(this).data('i'), $(this).data('s'));
+                    $(this).countdown({
+                        until: austDay,
+                        labels: labels,
+                        layout: layout
+                    });
+                });
+            }
+    </script>
+
+}
