--- a/AnperoFrontend/Views/Shared/_Layout.cshtml
+++ b/AnperoFrontend/Views/Shared/_Layout.cshtml
@@ -161,7 +161,7 @@
                                                     {
 
                                                         <li class="dropdown">
-                                                            <a href="@Anpero.StringHelpper.GetParentCategoryLink(commonInfo.MenuList[i].Tittle,commonInfo.MenuList[i].Id)" data-toggle="dropdown">@commonInfo.MenuList[i].Tittle</a>
+                                                            <a href="@commonInfo.MenuList[i].Link" data-toggle="dropdown">@commonInfo.MenuList[i].Tittle</a>
                                                             <ul class="dropdown-menu container-fluid">
                                                                 <li class="block-container">
                                                                     <ul class="block">
@@ -188,7 +188,7 @@
 
                                         </ul>
                                         <ul class="nav navbar-nav navbar-right">
-                                            <li><a class="link-buytheme" href="tel:@commonInfo.HotLine"><i class="fa fa-angle-double-right"></i> Click để đặt hàng @commonInfo.HotLine</a></li>
+                                            <li><a class="link-buytheme" href="tel:@commonInfo.HotLine"><i class="fa fa-angle-double-right"></i> Click để tư vấn @commonInfo.HotLine</a></li>
                                         </ul>
                                     </div><!--/.nav-collapse -->
                                 </div>
@@ -268,7 +268,7 @@
                         </ul>
                     </div>
 
-                    <p class="text-center">Copyrights © 2015 KuteShop. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpro">Anpero.com</a></p>
+                    <p class="text-center">Copyrights © 2015 Minh Khoi Store. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpro">Anpero.com</a></p>
                 </div>
             </div>
         </footer>
