--- a/AnperoFrontend/Views/Home/Index.cshtml
+++ b/AnperoFrontend/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                             <ul id="contenhomeslider-customPage">
                                 @foreach (var item in slide)
                                 {
-                                    <li><a href="@item.ClickUrl"><img alt="Funky roots" src="@item.ImagesUrl" title="@item.Description" /></a></li>
+                                    <li><a href="@item.ClickUrl"><img alt="@item.Description" src="@item.ImagesUrl" title="@item.Description" /></a></li>
                                 }
                             </ul>
                         }
@@ -30,7 +30,7 @@
                         </ul>
                     }
 
-                 
+
                     <div class="bx-control">
                         <div class="slide-prev">
                             <span id="bx-prev"></span>
@@ -48,16 +48,33 @@
             </div>
 
             <div class="col-sm-4 group-banner-slider" style="padding-left: 2px; padding-right: 14px;">
+                @if (ViewData["AdsSlide"] != null)
+                {
+                    Ads[] slide = (Ads[])ViewData["AdsSlide"];
+                    if (slide.Length > 0)
+                    {
+                        foreach (var item in slide)
+                        {
+                            <div class="banner-opacity sm-banner">
+                                <a href="@item.ClickUrl"><img src="@item.ImagesUrl" alt="@item.Description"></a>
+                            </div>
+                        }
+                    }
+                }
+                else
+                {
+                    <div class="banner-opacity sm-banner">
+                        <a href="#"><img src="~/assets/images/384x135.jpg" alt=""></a>
+                    </div>
+                    <div class="banner-opacity sm-banner">
+                        <a href="#"><img src="~/assets/images/384x135.jpg" alt=""></a>
+                    </div>
+                    <div class="banner-opacity sm-banner">
+                        <a href="#"><img src="~/assets/images/384x135.jpg" alt=""></a>
+                    </div>
+                }
 
-                <div class="banner-opacity sm-banner">
-                    <a href="#"><img src="assets/data/option6/banner13.jpg" alt="Banner"></a>
-                </div>
-                <div class="banner-opacity sm-banner">
-                    <a href="#"><img src="http://media.anpero.com/images/62017/boracute/12017060514121483.jpg" alt="Banner"></a>
-                </div>
-                <div class="banner-opacity sm-banner">
-                    <a href="#"><img src="http://media.anpero.com/images/62017/boracute/12017060514121483.jpg" alt="Banner"></a>
-                </div>
+
             </div>
 
         </div>
@@ -133,9 +150,9 @@
                                                                 <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">
                                                                     <img class="img-responsive" alt="@item.PrName" src="@item.Images" />
                                                                     @if (item.Rank >= 1)
-                                                                {
+                                                                    {
                                                                         <div class="featured-text"><span>Bán chạy</span></div>
-                                                                }
+                                                                    }
                                                                 </a>
                                                                 <div class="quick-view">
                                                                     <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
@@ -146,23 +163,23 @@
                                                                 <div class="group-price">
                                                                     <span class="product-new">Mới</span>
                                                                     @if (item.IsSale)
-                                                                {
-                                                                        <span class="product-sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice-item.Price).ToString())</span>
-                                                                }
+                                                                    {
+                                                                        <span class="product-sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice - item.Price).ToString())</span>
+                                                                    }
                                                                 </div>
                                                             </div>
                                                             <div class="right-block">
                                                                 <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">@item.PrName</a></h5>
                                                                 <div class="content_price">
                                                                     @if (item.IsSale)
-                                                                {
+                                                                    {
                                                                         <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
                                                                         <span class="price old-price">@item.Price đ</span>
-                                                                }
-                                                                else
-                                                                {
+                                                                    }
+                                                                    else
+                                                                    {
                                                                         <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
-                                                                }
+                                                                    }
                                                                 </div>
 
                                                             </div>
@@ -410,3 +427,127 @@
         </div>
     </div>
 </div>
+@if (ViewData["FeatureArticle"] != null)
+{
+    SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
+    <div class="row-blog">
+        <div class="container">
+            <div class="blog-list">
+                <h2 class="page-heading">
+                    <span class="page-heading-title">Tin từ blog</span>
+                </h2>
+                <div class="blog-list-wapper">
+                    <ul class="owl-carousel" data-dots="false" data-loop="true" data-nav="true" data-margin="30" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1},"600":{"items":3},"1000":{"items":4}}'>
+                        @foreach (BlogItem item in FeatureArticle.ItemList)
+                        {
+                            <li>
+                                <div class="post-thumb image-hover2">
+                                    <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)"><img src="@item.Thumb" alt="@item.Title"></a>
+                                </div>
+                                <div class="post-desc">
+                                    <h5 class="post-title">
+                                        <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">@Anpero.StringHelpper.SubString(30,item.Title)</a>
+                                    </h5>
+                                    <div class="post-meta">
+                                        <span class="date">@Anpero.StringHelpper.ConvertTimeVN(item.CreateDate)</span>
+                                        <span class="comment">@item.ViewTime view</span>
+                                    </div>
+                                    <div class="readmore">
+                                        <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Chi tiết</a>
+                                    </div>
+                                </div>
+                            </li>
+                        }
+                       
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+else
+{
+    <div class="row-blog">
+        <div class="container">
+            <!-- blog list -->
+            <div class="blog-list">
+                <h2 class="page-heading">
+                    <span class="page-heading-title">From the blog</span>
+                </h2>
+                <div class="blog-list-wapper">
+                    <ul class="owl-carousel" data-dots="false" data-loop="true" data-nav="true" data-margin="30" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1},"600":{"items":3},"1000":{"items":4}}'>
+                        <li>
+                            <div class="post-thumb image-hover2">
+                                <a href="#"><img src="assets/data/option4/blog1.jpg" alt="Blog"></a>
+                            </div>
+                            <div class="post-desc">
+                                <h5 class="post-title">
+                                    <a href="#">Share the love with KuteShop</a>
+                                </h5>
+                                <div class="post-meta">
+                                    <span class="date">February 27, 2015</span>
+                                    <span class="comment">27 comment</span>
+                                </div>
+                                <div class="readmore">
+                                    <a href="#">Readmore</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="post-thumb image-hover2">
+                                <a href="#"><img src="assets/data/option4/blog2.jpg" alt="Blog"></a>
+                            </div>
+                            <div class="post-desc">
+                                <h5 class="post-title">
+                                    <a href="#">Share the love with KuteShop</a>
+                                </h5>
+                                <div class="post-meta">
+                                    <span class="date">February 27, 2015</span>
+                                    <span class="comment">27 comment</span>
+                                </div>
+                                <div class="readmore">
+                                    <a href="#">Readmore</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="post-thumb image-hover2">
+                                <a href="#"><img src="assets/data/option4/blog3.jpg" alt="Blog"></a>
+                            </div>
+                            <div class="post-desc">
+                                <h5 class="post-title">
+                                    <a href="#">Big sales this summer</a>
+                                </h5>
+                                <div class="post-meta">
+                                    <span class="date">February 27, 2015</span>
+                                    <span class="comment">27 comment</span>
+                                </div>
+                                <div class="readmore">
+                                    <a href="#">Readmore</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="post-thumb image-hover2">
+                                <a href="#"><img src="assets/data/option4/blog4.jpg" alt="Blog"></a>
+                            </div>
+                            <div class="post-desc">
+                                <h5 class="post-title">
+                                    <a href="#">How to shop with us</a>
+                                </h5>
+                                <div class="post-meta">
+                                    <span class="date">February 27, 2015</span>
+                                    <span class="comment">27 comment</span>
+                                </div>
+                                <div class="readmore">
+                                    <a href="#">Readmore</a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- ./blog list -->
+        </div>
+    </div>
+}
