--- a/AnperoFrontend/Views/Shared/_Layout.cshtml
+++ b/AnperoFrontend/Views/Shared/_Layout.cshtml
@@ -229,22 +229,29 @@
                                 <div class="tit-contain">@commonInfo.HotLine</div>
                                 <div class="tit-name">Email:</div>
                                 <div class="tit-contain">@commonInfo.Email</div>
+                                @if(string.IsNullOrEmpty(commonInfo.Skype))
+                                {
+                                    <div class="tit-name">Skype:</div>
+                                    <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
+                                }
+                                
                             </div>
                         </div>
                     </div>
 
                     <div class="col-md-6">
-                        <div id="contact-box">
+                        <div id="contact-box" style="text-align: right;">
                             @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                             {
-                                <div class="fb-page"
-                                     data-href="@commonInfo.FaceBookLink"
-                                     data-width="380"
-                                     data-hide-cover="false"
-                                     data-show-facepile="false"
-                                     data-show-posts="false"></div>
+                            
+                                    <div class="fb-page"
+                                         data-tabs="messages"
+                                         data-href="@Html.Raw(commonInfo.FaceBookLink)"
+                                         data-width="500"                                         	
+                                         data-height="280"
+                                         data-hide-cover="false"></div>
                             }
-
+                         
                         </div>
 
                     </div>
@@ -273,14 +280,15 @@
             </div>
         </footer>
         <div id="fb-root"></div>
+        <div id="fb-root"></div>
         <script>
-            (function (d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0];
-                if (d.getElementById(id)) return;
-                js = d.createElement(s); js.id = id;
-                js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9&appId=369348303254756";
-                fjs.parentNode.insertBefore(js, fjs);
-            }(document, 'script', 'facebook-jssdk'));</script>
+(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9&appId=369348303254756";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     }
 </body>
 </html>
