update some text and label + price label

--- a/AnperoFrontend/Views/Article/Category.cshtml
+++ b/AnperoFrontend/Views/Article/Category.cshtml
@@ -23,7 +23,7 @@
             {
                 <div class="center_column col-xs-12 col-sm-9" id="center_column">
                     <h2 class="page-heading">
-                        <span class="page-heading-title2">@ViewBag.Category</span>
+                        <span class="page-heading-title2">@ViewBag.CategoryName</span>
                     </h2>
                     <div class="sortPagiBar clearfix">
 
