--- a/AnperoFrontend/Views/Shared/_Layout.cshtml
+++ b/AnperoFrontend/Views/Shared/_Layout.cshtml
@@ -190,7 +190,7 @@
 
                                                 }
                                             }
-                                            <li class="active"><a href="/blogs">Blog</a></li>
+                                            <li class="active"><a href="/blog">Blog</a></li>
                                         </ul>
                                         <ul class="nav navbar-nav navbar-right">
                                             <li><a class="link-buytheme" href="tel:@commonInfo.HotLine"><i class="fa fa-angle-double-right"></i> Click để tư vấn @commonInfo.HotLine</a></li>
