--- a/HR_Service_Frontend_01/Views/Product/Index.cshtml
+++ b/HR_Service_Frontend_01/Views/Product/Index.cshtml
@@ -63,19 +63,37 @@
 
                                 </div>
                                 <div class="product-price-group">
+                                    @{
+                                        string unitName = "";
+                                        if (item.SalePrice > 0 && item.SalePrice < 100000)
+                                        {
+                                            unitName = "/ giờ";
+                                        }
+                                        else if (item.SalePrice >= 100000 && item.SalePrice < 1000000)
+                                        {
+                                            unitName = "/ ngày";
+
+                                        }
+                                        else if (item.SalePrice >= 1000000)
+                                        {
+                                            unitName = "/ tháng";
+                                        }
+                                    }
+                                 
                                     @if (item.IsSale)
                                     {
-                                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
+                                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ @unitName</span>
+                                       
                                         <span class="old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
                                         <span class="discount">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice - item.Price).ToString()) đ</span>
                                     }
                                     else
                                     {
-                                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
+                                        <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ @unitName</span>
                                     }
                                 </div>
                                 <div class="info-orther">
-                                    <p>Mã Sản phẩm: #@item.Id</p>
+                                    <p>Mã dịch vụ: #@item.Id</p>
                                     <p>
                                         Trạng thái:
                                         @if (item.IsInstock)
